--- a/index.html
+++ b/index.html
@@ -8,12 +8,23 @@
     <link rel="stylesheet" href = "style.css"> 
     <title>Document</title>
 </head>
+
 <body>
+    <div class="container"></div>
 
-    <div class="container">
+    <div class="etch-a-sketch"> 
 
+    <div class="heading-div">
+        <h2 class="heading">Etch-a-Sketch</h2>
+    </div>
+
+    <div class="description">
+        <p>Enter description here</p>
     </div>
 
 
+
+
+</div>
 </body>
 </html>
