Rewrote table function

--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
 </head>
 
 <body>
-    <div class="container"></div>
 
     <div class="etch-a-sketch"> 
 
@@ -22,7 +21,15 @@
         <p>Enter description here</p>
     </div>
 
+    <div class="Inputs">
+        <input type="number" id="row" placeholder="Enter amount of rows" name="quantity" min="1" max="100"/>
+        <input type="number" id="column" placeholder="Enter amount of rows" name="quantity" min="1" max="100"/>
+    </div>
 
+    <div class="container">
+
+    </div>
+    <table id="pixelCanvas"></table>
 
 
 </div>
