--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <input type="number" id="column" placeholder="Enter amount of rows" name="quantity" min="1" max="100"/>
     </div>
 
-    <div class="container">
+    <div class="grid-container">
 
     </div>
     <table id="pixelCanvas"></table>
