--- a/index.html
+++ b/index.html
@@ -21,15 +21,17 @@
         <p>Enter description here</p>
     </div>
 
-    <div class="Inputs">
-        <input type="number" id="row" placeholder="Enter amount of rows" name="quantity" min="1" max="100"/>
-        <input type="number" id="column" placeholder="Enter amount of rows" name="quantity" min="1" max="100"/>
+    <div class="inputs">
+        <input type="number" id="row" placeholder="Rows" name="quantity" min="1" max="100"/>
+        <input type="number" id="column" placeholder="Columns" name="quantity" min="1" max="100"/>
     </div>
 
     <div class="grid-container">
 
     </div>
-    <table id="pixelCanvas"></table>
+
+    
+    <!--<table id="pixelCanvas"></table>-->
 
 
 </div>
