Add a submit feature and a way for input to be captured from the user

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="script.js" defer> </script>
     <link rel="stylesheet" href = "style.css"> 
-    <title>Document</title>
+    <title>Etch-A-Sketch</title>
 </head>
 
 <body>
@@ -24,6 +24,7 @@
     <div class="inputs">
         <input type="number" id="row" placeholder="Rows" name="quantity" min="1" max="100"/>
         <input type="number" id="column" placeholder="Columns" name="quantity" min="1" max="100"/>
+        <input type="submit" id="submit button">
     </div>
 
     <div class="grid-container">
@@ -31,7 +32,7 @@
     </div>
 
     
-    <!--<table id="pixelCanvas"></table>-->
+
 
 
 </div>
