--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <div class="inputs">
         <input type="number" id="row" placeholder="Rows" name="quantity" min="1" max="100"/>
         <input type="number" id="column" placeholder="Columns" name="quantity" min="1" max="100"/>
-        <input type="submit" id="submit button">
+        <button onclick="userInput()">Submit</button>
     </div>
 
     <div class="grid-container">
