--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </div>
 
     <div class="description">
-        <p>Enter description here</p>
+        <p>Draw away!</p>
     </div>
 
     <div class="inputs">
