Fix table styling being uneven after a certain point

--- a/index.html
+++ b/index.html
@@ -15,8 +15,7 @@
 
 <body>
 
-    <div class="etch-a-sketch"> 
-
+<header>
     <div class="heading-div">
         <h2 class="heading">Etch-a-Sketch</h2>
     </div>
@@ -24,9 +23,9 @@
     <div class="description">
         <p>Draw away!</p>
     </div>
+</header>
 
-    <div class="wrapper">
-
+<main class="wrapper">
     <div class="input-text">
         <p>Build your grid here</p>
     </div>
@@ -41,18 +40,17 @@
     <div class="grid-container">
 
     </div>
-</div>
-    <footer>
-        <div class="footer">
-            <p>Copyright © 2022 Aaron Lawrence
-            </p>
-        </div>
-    </footer>
 
+</main>
+
+<footer>
+<div class="footer">
+    <p>Copyright © 2022 Aaron Lawrence
+    </p>
+</div>
+</footer>
     
 
 
-
-</div>
 </body>
 </html>
